# my_hello_library

./: setup.py
my_hello_lib.egg-info/: PKG-INFO
my_hello_library/: hello_world.py
my_hello_library/my_hello_library.egg-info/: PKG-INFO  SOURCES.txt
my_hello_library/test/: index.py  index2.py
test/: index.py  pyproject.toml
