[tool.poetry]
name = "my-poetry"
version = "0.1.0"
description = ""
authors = ["luketych <luke.tych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
my_hello_library = {git = "git@github.com-luketych:luketych/my_hello_library"}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
